# Kali-CTF-MCP

./: .env.dist  .gitignore  LICENSE  README.md  dashboard.py  manage.sh  pyproject.toml  sse_server.py
Kali/: pyvenv.cfg
ctf_mcp/: __init__.py  server.py  server_factory.py
ctf_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ctf_mcp/adapters/: __init__.py  angr_adapter.py  base.py  binwalk_adapter.py  hashcat_adapter.py  john_adapter.py  nmap_adapter.py  pwntools_adapter.py  sqlmap_adapter.py  tshark_adapter.py  volatility_adapter.py
ctf_mcp/core/: __init__.py  classifier.py  executor.py  knowledge.py  orchestrator.py  planner.py  session.py
ctf_mcp/engines/: __init__.py  base.py  crypto_engine.py  forensics_engine.py  misc_engine.py  pwn_engine.py  reverse_engine.py  web_engine.py
ctf_mcp/llm/: __init__.py  config.py
ctf_mcp/llm/agent/: __init__.py  memory.py  react.py  tools.py
ctf_mcp/llm/integration/: __init__.py  enhanced_orchestrator.py
ctf_mcp/llm/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
ctf_mcp/llm/rag/: __init__.py  retriever.py
ctf_mcp/mcp/: __init__.py  streaming.py  tasks.py  tools_registry.py
ctf_mcp/network/: __init__.py  exploit_runner.py  http_client.py  remote.py
ctf_mcp/servers/: crypto.py  forensics.py  pwn.py  reverse.py  web.py
ctf_mcp/tools/: __init__.py  crypto.py  forensics.py  hashcat.py  memory.py  misc.py  network.py  pcap.py  pwn.py  reverse.py  sqlmap.py  web.py
ctf_mcp/utils/: __init__.py  helpers.py  security.py  timeout.py
