[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf-mcp"
version = "0.1.0"
description = "MCP Server for CTF Challenges - Crypto, Web, Pwn, Reverse, Forensics, Misc"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Coff0xc"}
]
keywords = ["ctf", "mcp", "security", "hacking", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    # Formatting
    "black>=23.0.0",
    "ruff>=0.1.0",
    # Static Analysis
    "pylint>=3.0.0",
    "radon>=6.0.0",
    "vulture>=2.10",
    # Security
    "bandit>=1.7.0",
    # Pre-commit
    "pre-commit>=3.6.0",
]
minimal = []
standard = [
    "pycryptodome>=3.20.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "beautifulsoup4>=4.12.0",
]
advanced = [
    "pycryptodome>=3.20.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "sympy>=1.12",
    "gmpy2>=2.1.5",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
]
expert = [
    "pycryptodome>=3.20.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "sympy>=1.12",
    "gmpy2>=2.1.5",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "pwntools>=4.11.0; sys_platform == 'linux'",
    "capstone>=5.0.0",
    "keystone-engine>=0.9.2",
    "numpy>=1.24.0",
    "z3-solver>=4.12.0",
]
full = [
    "pycryptodome>=3.20.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "sympy>=1.12",
    "gmpy2>=2.1.5",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "pwntools>=4.11.0; sys_platform == 'linux'",
    "capstone>=5.0.0",
    "keystone-engine>=0.9.2",
    "numpy>=1.24.0",
    "z3-solver>=4.12.0",
    "angr>=9.2.0; sys_platform == 'linux'",
]
llm = [
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
]
llm-full = [
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "pycryptodome>=3.20.0",
    "requests>=2.31.0",
    "PyJWT>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "sympy>=1.12",
    "Pillow>=10.0.0",
]

[project.scripts]
ctf-mcp = "ctf_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Coff0xc/CTF-MCP"
Repository = "https://github.com/Coff0xc/CTF-MCP"
Issues = "https://github.com/Coff0xc/CTF-MCP/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ctf_mcp*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ctf_mcp"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B311"]  # assert, random

[tool.vulture]
min_confidence = 80
exclude = ["tests/"]
